# doubleagent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.example.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  zensical.toml
.changeset/: README.md  add-bypass-policy.md  add-value-from-file.md  log-blocked-requests.md  move-cert-env-to-install-ca.md  node-proxy-ca-envs.md
.github/workflows/: release.yml
config/: config.example.json  config.schema.json
docs/: index.md
docs/concepts/: architecture.md  network-isolation.md  secret-injection.md
docs/configuration/: index.md  port-forwarding.md  rules.md  secrets.md
docs/getting-started/: adding-mcp-servers.md  index.md  quick-start.md
docs/guides/: development.md  troubleshooting.md
doubleagent/: __init__.py  addon.py  ca.py  config.py  forward.py  health.py  iptables.py  logging_utils.py  main.py  policy.py
scripts/: create-github-release.mjs  entrypoint.sh  install-ca.sh  sync-version.mjs
tests/: test_addon.py  test_config.py  test_forward.py  test_integration.py  test_iptables.py  test_main.py  test_policy.py  test_proxy_runtime.py
