[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doubleagent"
version = "1.0.0"
description = "Explicit proxy sidecar for AI containers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "mitmproxy>=12,<13",
  "pydantic>=2,<3",
]

[project.scripts]
doubleagent = "doubleagent.main:main"

[tool.setuptools]
packages = ["doubleagent"]
